Corrected spelling error in welcome message

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>
-        Hellow World! Welcome to Daniel Roman's Page.
+        Hello World! Welcome to Daniel Roman's Page.
     </h1>
 </body>
 </html>
