Added main sections

--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Daniel Roman's Portfolio</title>
 </head>
+<header>
+
+</header>
 <body>
-    <h1>
-        Hello World! Welcome to Daniel Roman's Page.
-    </h1>
+    <header>
+    <h1>Hello World! Welcome to Daniel Roman's Portfolio.</h1>
+    <span>My business is Code</span>
+    </header>
+    
+    <main>
+        <section>About Me</section>
+        <section>My Products</section>
+        <section>Get in Touch</section>
+    </main>
 </body>
 </html>
