Added footer HTML

--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@
 <body>
     <header>
     <h1>Hello World! Welcome to Daniel Roman's Portfolio.</h1>
-    <span>My business is Code</span>
+    <span>My Business is Code</span>
     </header>
     
     <main>
-        <section>About Me</section>
-        <section>My Products</section>
-        <section>Get in Touch</section>
+        <section>
+            <h2>About Me</h2>
+        </section>
+        <section>
+            <h2>My Projects</h2>
+        </section>
+        <section>
+            <h2>Get in Touch</h2>
+            </section>
     </main>
+    <footer>
+        &copy; <script>document.write( new Date().getFullYear() );</script> Daniel Roman's Portfolio 
+    </footer>
 </body>
 </html>
