Began work on style sheet

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Roman's Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <header>
 
@@ -31,11 +32,19 @@
                 <article>
                     <h3>Project 1</h3>
                     <img src="./images/project1.jpg">
+                    <p>I created this program to...</p>
+                </article>
+                <article>
                     <h3>Project 2</h3>
                     <img src="./images/project2.jpg">
+                    <p>I created this Project 2 in order...</p>
+                </article>
+                <article>
                     <h3>Project 3</h3>
                     <img src="./images/project3.jpg">
-            </div>
+                    <p>I was challenged to deliver Project 3...</p>
+                </article>
+                </div>
         </section>
         <section id="#getInTouch">
             <h2>Get in Touch</h2>
