Added about me copy

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <section id="aboutMe">
             <h2>About Me</h2>
-            <p>Lucas ipsum dolor sit amet hutt lando twi'lek maul hutt ackbar han luke organa kashyyyk. Calamari dooku moff darth antilles. Antilles solo grievous luke calamari mon. Skywalker sidious moff baba cade jango. Skywalker calamari mace hutt darth. Yoda anakin jabba tatooine hutt wampa sidious ewok fisto. Chewbacca amidala hutt leia darth. Dantooine organa palpatine calamari. Anakin dantooine skywalker jabba mara bespin. Windu darth obi-wan wicket moff darth. Moff mon endor sith moff. Skywalker hoth ahsoka wedge hoth. Hoth jar ackbar jango thrawn sidious kenobi. Wookiee jinn darth bespin vader organa organa darth mace. Fett kenobi aayla sebulba bothan. Wedge gamorrean ponda yoda mara. Padmé c-3p0 dagobah palpatine. Palpatine tatooine yoda qui-gonn dagobah k-3po amidala. Antilles boba c-3p0 padmé bothan grievous moff calamari jawa. Jabba ackbar boba dantooine fett zabrak luke. Mon jade boba jade cade sebulba. Owen moff dagobah kessel calamari. Ben antilles obi-wan organa solo watto. Grievous calamari organa kessel gamorrean solo r2-d2 qui-gon maul.</p>
+            <p>Talented digital marketing specialist with more than five years’ experience in fast-paced, diverse business environments including consulting and healthcare. Recognized for being both a strategist and a doer. Committed to driving business growth, including exceeding goals for patient acquisition in my former healthcare role as well as multiplying client billings in my former consulting role, for major names such as U.S. Cellular, Huntington National Bank, DirectEnergy and others. Cited for having an unusually strong commitment to customer service and a strong ability to solve problems creatively. Currently seeking an opportunity to be of significant value to the right organization, expand my knowledge and experience base, and allow for greater professional growth in software development. Willing to relocate.</p>
         </section>
         <section id="myProjects">
             <h2>My Projects</h2>
@@ -35,13 +35,13 @@
                     <p>I created this program to...</p>
                 </article>
                 <article>
-                    <h3>Project 2</h3>
-                    <img src="./images/project2.jpg">
+                    <h3>Portfolio Web Page</h3>
+                    <img src="./images/portfolio_icon.png">
                     <p>I created this Project 2 in order...</p>
                 </article>
                 <article>
                     <h3>Project 3</h3>
-                    <img src="./images/project3.jpg">
+                    <img src="./images/csharp_icon.jpg">
                     <p>I was challenged to deliver Project 3...</p>
                 </article>
                 </div>
