Added home link to site header

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <nav>
+            <a href="https://droman21.github.io/">Home</a>
             <a href="#aboutMe">About Me</a>
             <a href="#myProjects">My Projects</a>
             <a href="#getInTouch">Get in Touch</a>
@@ -37,7 +38,7 @@
                 <article>
                     <h3>Portfolio Web Page</h3>
                     <img src="./images/portfolio_icon.png">
-                    <p>I created this Project 2 in order...</p>
+                    <p>I created this web page using HTML and CSS.</p>
                 </article>
                 <article>
                     <h3>Project 3</h3>
@@ -50,8 +51,8 @@
             <h2>Get in Touch</h2>
             <p>Contact me using any of the following:</p>
             <ul>
-                <li>Phone: xxx-xxx-xxxx</li>
-                <li>Email: x.x@gmail.com</li>
+                <li>Phone: (419) 304-5684</li>
+                <li>Email: dan.roman21@gmail.com</li>
             </ul>
             </section>
     </main>
