Updated project icons

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
 </header>
 <body>
+    <a name="top"></a>
     <header>
         <nav>
-            <a href="https://droman21.github.io/">Home</a>
+            <a href="#top">Home</a>
             <a href="#aboutMe">About Me</a>
             <a href="#myProjects">My Projects</a>
             <a href="#getInTouch">Get in Touch</a>
@@ -37,12 +38,12 @@
                 </article>
                 <article>
                     <h3>Portfolio Web Page</h3>
-                    <img src="./images/portfolio_icon.png">
+                    <img src="./images/portfolio_icon.jpg">
                     <p>I created this web page using HTML and CSS.</p>
                 </article>
                 <article>
                     <h3>Project 3</h3>
-                    <img src="./images/csharp_icon.jpg">
+                    <img src="./images/csharp_icon.png">
                     <p>I was challenged to deliver Project 3...</p>
                 </article>
                 </div>
