--- a/index.html
+++ b/index.html
@@ -29,21 +29,24 @@
         </section>
         <section id="myProjects">
             <h2>My Projects</h2>
-            <p>Lucas ipsum dolor sit amet hutt lando twi'lek maul hutt ackbar han luke organa kashyyyk. Calamari dooku moff darth antilles. Antilles solo grievous luke calamari mon. Skywalker sidious moff baba cade jango. Skywalker calamari mace hutt darth. Yoda anakin jabba tatooine hutt wampa sidious ewok fisto. Chewbacca amidala hutt leia darth. Dantooine organa palpatine calamari. Anakin dantooine skywalker jabba mara bespin. Windu darth obi-wan wicket moff darth. Moff mon endor sith moff. Skywalker hoth ahsoka wedge hoth. Hoth jar ackbar jango thrawn sidious kenobi. Wookiee jinn darth bespin vader organa organa darth mace. Fett kenobi aayla sebulba bothan. Wedge gamorrean ponda yoda mara. Padmé c-3p0 dagobah palpatine. Palpatine tatooine yoda qui-gonn dagobah k-3po amidala. Antilles boba c-3p0 padmé bothan grievous moff calamari jawa. Jabba ackbar boba dantooine fett zabrak luke. Mon jade boba jade cade sebulba. Owen moff dagobah kessel calamari. Ben antilles obi-wan organa solo watto. Grievous calamari organa kessel gamorrean solo r2-d2 qui-gon maul.</p>
+            <p>Lucas ipsum dolor sit amet hutt lando twi'lek maul hutt ackbar han luke organa kashyyyk. Calamari dooku moff darth antilles. Antilles solo grievous luke calamari mon. Skywalker sidious moff baba cade jango. </p>
             <div id="projects">
                 <article>
                     <h3>Virtual Pet Shelter</h3>
-                    <img src="./images/pet_icon.png">
+                    <a href="https://www.github.com" target="_blank">
+                    <img src="./images/pet_icon.png"></a>
                     <p>I created this program to...</p>
                 </article>
                 <article>
                     <h3>Portfolio Web Page</h3>
-                    <img src="./images/portfolio_icon.jpg">
+                    <a href="https://www.droman21.github.io" target="_blank">
+                    <img src="./images/portfolio_icon.jpg"></a>
                     <p>I created this web page using HTML and CSS.</p>
                 </article>
                 <article>
                     <h3>Project 3</h3>
-                    <img src="./images/csharp_icon.png">
+                    <a href="https://www.github.com" target="_blank">
+                    <img src="./images/csharp_icon.png"></a>
                     <p>I was challenged to deliver Project 3...</p>
                 </article>
                 </div>
