Updated about me section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <section id="aboutMe">
             <h2>About Me</h2>
             <p>Talented digital marketing specialist with more than five years’ experience in fast-paced, diverse business environments including consulting and healthcare. Recognized for being both a strategist and a doer. Committed to driving business growth, including exceeding goals for patient acquisition in my former healthcare role as well as multiplying client billings in my former consulting role, for major names such as U.S. Cellular, Huntington National Bank, DirectEnergy and others. Cited for having an unusually strong commitment to customer service and a strong ability to solve problems creatively. Currently seeking an opportunity to be of significant value to the right organization, expand my knowledge and experience base, and allow for greater professional growth in software development. Willing to relocate.</p>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/daniel-roman-9168053b" target="_blank"> LinkedIn Profile</a></li>
+                <li><a href="https://github.com/droman21" target="_blank">GitHub Profile</a></li>
+            </ul>
         </section>
         <section id="myProjects">
             <h2>My Projects</h2>
@@ -35,19 +39,19 @@
                     <h3>Virtual Pet Shelter</h3>
                     <a href="https://www.github.com" target="_blank">
                     <img src="./images/pet_icon.png"></a>
-                    <p>I created this program to...</p>
+                    <p>Skills/technology used: C#</p>
                 </article>
                 <article>
                     <h3>Portfolio Web Page</h3>
                     <a href="https://www.droman21.github.io" target="_blank">
                     <img src="./images/portfolio_icon.jpg"></a>
-                    <p>I created this web page using HTML and CSS.</p>
+                    <p>Skills/technology used: HTML and CSS.</p>
                 </article>
                 <article>
                     <h3>Project 3</h3>
                     <a href="https://www.github.com" target="_blank">
                     <img src="./images/csharp_icon.png"></a>
-                    <p>I was challenged to deliver Project 3...</p>
+                    <p>Skills/technology used: XXXXX</p>
                 </article>
                 </div>
         </section>
@@ -56,7 +60,7 @@
             <p>Contact me using any of the following:</p>
             <ul>
                 <li>Phone: (419) 304-5684</li>
-                <li>Email: dan.roman21@gmail.com</li>
+                <li>Email: <a href="mailto:dan.roman21@gmail.com">dan.roman21@gmail.com</a></li>
             </ul>
             </section>
     </main>
