Applied linkedin and github clickable icons to nav header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Roman's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <header>
 
@@ -17,6 +18,8 @@
             <a href="#aboutMe">About Me</a>
             <a href="#myProjects">My Projects</a>
             <a href="#getInTouch">Get in Touch</a>
+            <a href="https://www.linkedin.com/in/daniel-roman-9168053b" target="_blank"><i class="fa fa-linkedin-square" style="font-size:35px;color: red"></i></a>
+            <a href="https://github.com/droman21" target="_blank"><i class="fa fa-github" style="font-size:35px; color: green"></i></a>
         </nav>
     <h1>Daniel Roman's Portfolio</h1>
     <span>My Business is Code</span>
@@ -26,33 +29,28 @@
             <h2>About Me</h2>
                 <img src="./images/headshot.png" alt="Daniel Roman" style="width:170px;height:215px;margin-right:15px;">
                 <p>Talented digital marketing specialist with more than five years’ experience in fast-paced, diverse business environments including consulting and healthcare. Recognized for being both a strategist and a doer. Committed to driving business growth, including exceeding goals for patient acquisition in my former healthcare role as well as multiplying client billings in my former consulting role, for major names such as U.S. Cellular, Huntington National Bank, DirectEnergy and others. Cited for having an unusually strong commitment to customer service and a strong ability to solve problems creatively. Currently seeking an opportunity to be of significant value to the right organization, expand my knowledge and experience base, and allow for greater professional growth in software development. Willing to relocate.</p>
-            <p>Profile Links:</p>
-            <ul>
-                <li><a href="https://www.linkedin.com/in/daniel-roman-9168053b" target="_blank"> LinkedIn Profile</a></li>
-                <li><a href="https://github.com/droman21" target="_blank">GitHub Profile</a></li>
-            </ul>
         </section>
         <section id="myProjects">
             <h2>My Projects</h2>
             <p>Lucas ipsum dolor sit amet hutt lando twi'lek maul hutt ackbar han luke organa kashyyyk. Calamari dooku moff darth antilles. Antilles solo grievous luke calamari mon. Skywalker sidious moff baba cade jango. </p>
             <div id="projects">
                 <article>
-                    <h3>Virtual Pet Shelter</h3>
-                    <a href="https://www.github.com" target="_blank">
+                    <h3>Virtual Pet Shelter Console App</h3>
+                    <a href="https://github.com/droman21/virtual-pet-droman21" target="_blank">
                     <img src="./images/pet_icon.png"></a>
-                    <p>Skills/technology used: C#</p>
+                    <p>Skills/Technology Used: C#, Version Control</p>
                 </article>
                 <article>
-                    <h3>Portfolio Web Page</h3>
-                    <a href="https://www.droman21.github.io" target="_blank">
+                    <h3>Donut Multiplier Game</h3>
+                    <a href="https://github.com/droman21/donut_multiplier_game" target="_blank">
                     <img src="./images/portfolio_icon.jpg"></a>
-                    <p>Skills/technology used: HTML and CSS.</p>
+                    <p>Skills/technology used: HTML, CSS, Version Control</p>
                 </article>
                 <article>
-                    <h3>Project 3</h3>
-                    <a href="https://www.github.com" target="_blank">
+                    <h3>R.O.P.E. App</h3>
+                    <a href="https://github.com/droman21/rope_final_project" target="_blank">
                     <img src="./images/csharp_icon.png"></a>
-                    <p>Skills/technology used: XXXXX</p>
+                    <p>Skills/technology used: JavaScript, C#, HTML, CSS, Entity Framework, Single Page Web Application</p>
                 </article>
                 </div>
         </section>
@@ -61,12 +59,15 @@
             <p>Contact me using any of the following:</p>
             <ul>
                 <li>Phone: (419) 304-5684</li>
-                <li>Email: <a href="mailto:dan.roman21@gmail.com">dan.roman21@gmail.com</a></li>
+                <li>Email: <a href="mailto:dan.roman21@gmail.com">Click Here</a></li>
             </ul>
             </section>
     </main>
+    </main>
     <footer>
-        &copy; <script>document.write( new Date().getFullYear() );</script> Daniel Roman's Portfolio 
+    <div class="sticky">
+        &copy; <script>document.write( new Date().getFullYear() );</script> Daniel Roman's Portfolio
+    </div>
     </footer>
 </body>
 </html>
