--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css//theme.css">
-    <link rel="stylesheet" href="form.css" >
 </head>
 <body>
 	<main>
@@ -25,33 +24,30 @@
             <a target="_blank" href="https://stackoverflow.com/users/13971041/droman21" target="_blank"><i class="fab fa-stack-overflow"></i></a>
             <a target="_blank" href="https://sway.office.com/vKVqIviwQ2FOGIkX" target="_blank"><i class="far fa-address-card"></i></a>
             <a target="_blank" href="" target="_blank"><i class=""></i></a>
-            <br><br>
             <section id="myProjects">
                 <h2>Projects</h2>
                 <div id="projects">
                     <article class="project1">
                         <h4>C#</h4>
                         <h4>Virtual Pet Shelter</h4>
-                        <a href="https://www.github.com" target="_blank">
+                        <a href="https://www.github.com" target="_blank"></a>
                         <p>Similiar to digimon, a console app that enables a user to care for pets.</p>
                     </article>
-                    <br><br>
                     <article class="project2">
                         <h4>HTML, CSS</h4>
                         <h4>Donut Multiplier Game</h4>
-                        <a href="https://www.droman21.github.io" target="_blank">
+                        <a href="https://www.droman21.github.io" target="_blank"></a>
                         <p></p>
                     </article>
-                    <br><br>
                     <article class="project3">
                         <h4>C#, JavaScript, CSS, HTML <br><br>R.O.P.E. App</h4>
-                        <a href="https://www.github.com" target="_blank">
+                        <a href="https://www.github.com" target="_blank"></a>
                         <p></p>
                     </article>
-                    </div>
+                </div>
             </section>
             <br>
-            <div class ="contactForm">
+            <!-- <div class ="contactForm">
             <h2>Get in Touch</h2>
             <form
             action="https://formspree.io/mwkrzevv"
@@ -73,7 +69,7 @@
             <br><br>
             <button class="Sendbtn" type="submit">Send</button>
           </form>
-        </div>
+        </div> -->
     </main>
     <script data-cfasync="false" type="text/javascript" src="form-submission-handler.js"></script>
 </body>
