More styling updates

--- a/index.html
+++ b/index.html
@@ -24,25 +24,18 @@
             <a target="_blank" href="https://stackoverflow.com/users/13971041/droman21" target="_blank"><i class="fab fa-stack-overflow"></i></a>
             <a target="_blank" href="https://sway.office.com/vKVqIviwQ2FOGIkX" target="_blank"><i class="far fa-address-card"></i></a>
             <a target="_blank" href="" target="_blank"><i class=""></i></a>
+            <br><br>
             <section id="myProjects">
                 <h2>Projects</h2>
                 <div id="projects">
                     <article class="project1">
-                        <h4>C#</h4>
-                        <h4>Virtual Pet Shelter</h4>
-                        <a href="https://www.github.com" target="_blank"></a>
-                        <p>Similiar to digimon, a console app that enables a user to care for pets.</p>
+                        <a href="https://github.com/droman21/virtual-pet-droman21" target="_blank" style="text-decoration:none;"><h4>C#</h4><h4>Virtual Pet Shelter</h4></a>
                     </article>
                     <article class="project2">
-                        <h4>HTML, CSS</h4>
-                        <h4>Donut Multiplier Game</h4>
-                        <a href="https://www.droman21.github.io" target="_blank"></a>
-                        <p></p>
+                        <a href="https://github.com/droman21/donut_multiplier_game" target="_blank" style="text-decoration:none;"><h4>HTML // CSS</h4><h4>Donut Multiplier Game</h4></a>
                     </article>
                     <article class="project3">
-                        <h4>C#, JavaScript, CSS, HTML <br><br>R.O.P.E. App</h4>
-                        <a href="https://www.github.com" target="_blank"></a>
-                        <p></p>
+                        <a href="https://github.com/droman21/rope_final_project" target="_blank" style="text-decoration:none;"><h4>C# // JAVASCRIPT <br><br>R.O.P.E. App</h4></a>
                     </article>
                 </div>
             </section>
